--- a/SensorCommunication/label_SAM/label_SAM.ipynb
+++ b/SensorCommunication/label_SAM/label_SAM.ipynb
@@ -421,16 +421,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cd70e7ea-1574-4ee8-bce1-d380e42062fe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 11,
+   "id": "667691eb-4f5b-4991-8833-40c962adec7c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Box drawn with coordinates (xyxy format): [361, 108, 1042, 641]\n",
+      "Final boxes array:\n",
+      "[[ 361  108 1042  641]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "# Function to set up and run the bounding box drawer\n",
+    "def run_bbox_drawer():\n",
+    "    img_path = './rgb_000001.png'\n",
+    "    image_bgr = cv2.imread(img_path)\n",
+    "    if image_bgr is None:\n",
+    "        raise ValueError(\"Image not found, check the path.\")\n",
+    "    # image = cv2.cvtColor(image_bgr, cv2.COLOR_BGR2RGB)\n",
+    "    image = image_bgr\n",
+    "    # Variables to hold the state\n",
+    "    drawing = False  # True if the mouse is pressed down\n",
+    "    ix, iy = -1, -1  # Initial x and y locations\n",
+    "    boxes = []\n",
+    "\n",
+    "    # Mouse callback function\n",
+    "    def click_event(event, x, y, flags, param):\n",
+    "        nonlocal ix, iy, drawing, image\n",
+    "        if event == cv2.EVENT_LBUTTONDOWN:\n",
+    "            drawing = True\n",
+    "            ix, iy = x, y\n",
+    "\n",
+    "        elif event == cv2.EVENT_MOUSEMOVE:\n",
+    "            if drawing:\n",
+    "                temp_image = image.copy()\n",
+    "                cv2.rectangle(temp_image, (ix, iy), (x, y), (255, 0, 0), 2)\n",
+    "                cv2.imshow('image', temp_image)\n",
+    "\n",
+    "        elif event == cv2.EVENT_LBUTTONUP:\n",
+    "            drawing = False\n",
+    "            cv2.rectangle(image, (ix, iy), (x, y), (255, 0, 0), 2)\n",
+    "            cv2.imshow('image', image)\n",
+    "            box = [min(ix, x), min(iy, y), max(ix, x), max(iy, y)]\n",
+    "            boxes.append(box)\n",
+    "            print(f\"Box drawn with coordinates (xyxy format): {box}\")\n",
+    "\n",
+    "    # Show the image\n",
+    "    cv2.imshow('image', image)\n",
+    "    cv2.setMouseCallback('image', click_event)\n",
+    "    cv2.waitKey(0)\n",
+    "    cv2.destroyAllWindows()\n",
+    "\n",
+    "    # Output the boxes\n",
+    "    if boxes:\n",
+    "        boxes_array = np.array(boxes)\n",
+    "        print(f\"Final boxes array:\\n{boxes_array}\")\n",
+    "\n",
+    "# Call the function to run the drawer\n",
+    "run_bbox_drawer()\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "667691eb-4f5b-4991-8833-40c962adec7c",
+   "id": "91a9ac28-4326-4e20-ab35-d4a078d26d61",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -452,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
