--- a/SensorCommunication/gantry_communication_code.ipynb
+++ b/SensorCommunication/gantry_communication_code.ipynb
@@ -26,6 +26,7 @@
     }
    ],
    "source": [
+    "#Getting the position of the camera\n",
     "print(requests.get(\"http://localhost:8010/RestPLCService/getint?address=4020\").json()[\"Value\"])"
    ]
   },
@@ -47,16 +48,9 @@
     }
    ],
    "source": [
+    "#Setting the position of the camera\n",
     "requests.get(\"http://localhost:8010/RestPLCService/setint?address=4010&value=%d\" % 1209)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "9bd77c7f-27f6-486b-a70a-836bb0c278dd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -101,11 +95,13 @@
    "source": [
     "li_th_pos = [1340, 1055, 740, 435, 1510]\n",
     "if requests.get(\"http://localhost:8010/RestPLCService/getint?address=4020\").json()[\"Value\"] != 1510:\n",
+    "    # Detect the camera position and set it to the origin position\n",
     "    requests.get(\"http://localhost:8010/RestPLCService/setint?address=4010&value=%d\" % 1510)\n",
     "    time.sleep(10)\n",
     "    print(\"The gantry's position is:\", requests.get(\"http://localhost:8010/RestPLCService/getint?address=4020\").json()[\"Value\"])\n",
     "    # call rgbd and thermal capture\n",
     "for pos in li_th_pos:\n",
+    "    # At intervals, the camera moves one position\n",
     "    requests.get(\"http://localhost:8010/RestPLCService/setint?address=4010&value=%d\" % pos)\n",
     "    time.sleep(10)\n",
     "    print(\"The gantry's position is:\",requests.get(\"http://localhost:8010/RestPLCService/getint?address=4020\").json()[\"Value\"])\n",
