Added mask vis code

--- a/SensorCommunication/relasense_capture.ipynb
+++ b/SensorCommunication/relasense_capture.ipynb
@@ -15,7 +15,7 @@
     "import cv2\n",
     "from datetime import datetime\n",
     "import os\n",
-    "import json\n"
+    "import json"
    ]
   },
   {
