--- a/SensorCommunication/label_SAM/label_SAM.ipynb
+++ b/SensorCommunication/label_SAM/label_SAM.ipynb
@@ -129,13 +129,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "72be9fde-00ce-463e-a052-7c68779774d9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ignore 435\n",
-    "img_path = './test_plant_20240502133102/rgb_1509.png'\n",
+    "img_path = './rgb_000017_fd.png'\n",
     "\n",
     "image = cv2.imread(img_path)\n",
     "image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)"
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "335cfd71-cad5-48d0-b5fc-af7ba7b8fdec",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "667691eb-4f5b-4991-8833-40c962adec7c",
    "metadata": {
     "tags": []
@@ -163,35 +163,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Box drawn with coordinates (xyxy format): [751, 360, 774, 384]\n",
-      "Box drawn with coordinates (xyxy format): [737, 344, 765, 376]\n",
-      "Box drawn with coordinates (xyxy format): [743, 372, 774, 411]\n",
-      "Box drawn with coordinates (xyxy format): [782, 330, 799, 352]\n",
-      "Box drawn with coordinates (xyxy format): [742, 305, 767, 339]\n",
-      "Box drawn with coordinates (xyxy format): [744, 278, 781, 319]\n",
-      "Box drawn with coordinates (xyxy format): [778, 286, 823, 338]\n",
-      "Box drawn with coordinates (xyxy format): [691, 328, 759, 401]\n",
-      "Box drawn with coordinates (xyxy format): [571, 252, 691, 350]\n",
-      "Box drawn with coordinates (xyxy format): [618, 361, 731, 500]\n",
-      "Box drawn with coordinates (xyxy format): [760, 366, 882, 506]\n",
-      "Box drawn with coordinates (xyxy format): [766, 446, 884, 571]\n",
-      "Box drawn with coordinates (xyxy format): [711, 112, 849, 295]\n",
-      "Box drawn with coordinates (xyxy format): [816, 207, 923, 290]\n",
-      "Final boxes array:\n",
-      "[[751 360 774 384]\n",
-      " [737 344 765 376]\n",
-      " [743 372 774 411]\n",
-      " [782 330 799 352]\n",
-      " [742 305 767 339]\n",
-      " [744 278 781 319]\n",
-      " [778 286 823 338]\n",
-      " [691 328 759 401]\n",
-      " [571 252 691 350]\n",
-      " [618 361 731 500]\n",
-      " [760 366 882 506]\n",
-      " [766 446 884 571]\n",
-      " [711 112 849 295]\n",
-      " [816 207 923 290]]\n"
+      "Box drawn with coordinates (xyxy format): [676, 588, 842, 681]\n",
+      "Box drawn with coordinates (xyxy format): [659, 474, 841, 605]\n",
+      "Box drawn with coordinates (xyxy format): [648, 417, 822, 552]\n",
+      "Box drawn with coordinates (xyxy format): [551, 460, 656, 593]\n",
+      "Box drawn with coordinates (xyxy format): [495, 476, 583, 610]\n",
+      "Box drawn with coordinates (xyxy format): [605, 420, 690, 482]\n",
+      "Box drawn with coordinates (xyxy format): [617, 344, 753, 455]\n",
+      "Box drawn with coordinates (xyxy format): [775, 313, 871, 487]\n",
+      "Box drawn with coordinates (xyxy format): [745, 131, 863, 278]\n"
      ]
     }
    ],
@@ -254,44 +234,6 @@
     "\n",
     "# Call the function to run the drawer\n",
     "input_box = run_bbox_drawer()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d0edc659-8e87-4c82-b7c2-1a15efa643c7",
-   "metadata": {},
-   "source": [
-    "### single box"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91a9ac28-4326-4e20-ab35-d4a078d26d61",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "masks, _, _ = predictor.predict(\n",
-    "    point_coords=None,\n",
-    "    point_labels=None,\n",
-    "    box=input_box[None, :],\n",
-    "    multimask_output=False,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "58e0d698-9357-4704-a603-15717289737c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10, 10))\n",
-    "plt.imshow(image)\n",
-    "show_mask(masks[0], plt.gca())\n",
-    "show_box(input_box[0], plt.gca())\n",
-    "plt.axis('off')\n",
-    "plt.show()"
    ]
   },
   {
@@ -447,6 +389,44 @@
    "outputs": [],
    "source": [
     "np.save(img_path[:-4]+'_mask.npy', masks.cpu().numpy())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0edc659-8e87-4c82-b7c2-1a15efa643c7",
+   "metadata": {},
+   "source": [
+    "### single box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91a9ac28-4326-4e20-ab35-d4a078d26d61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masks, _, _ = predictor.predict(\n",
+    "    point_coords=None,\n",
+    "    point_labels=None,\n",
+    "    box=input_box[None, :],\n",
+    "    multimask_output=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58e0d698-9357-4704-a603-15717289737c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 10))\n",
+    "plt.imshow(image)\n",
+    "show_mask(masks[0], plt.gca())\n",
+    "show_box(input_box[0], plt.gca())\n",
+    "plt.axis('off')\n",
+    "plt.show()"
    ]
   },
   {
